fix banner height on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1934,6 +1934,7 @@
 				background-position: center center;
 				background-repeat: no-repeat;
 				background-size: cover;
+				height: 100vh;
 			}
 
 			#footer {
